# knit-row-counter

./: .env.sample  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  Dockerfile.frontend  README.md  TODO.md  database.db  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  eslint.config.js  index.html  knip.json  nginx.conf  nginx.dev.conf  openapi-config.js  package-lock.json  package.json  pyproject.toml  realm-export.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: node.js.yml
backend/: database.py  main.py
backend/api/: dependencies.py
backend/core/: admin.py  auth.py  qr.py
backend/models/: __init__.py  pattern.py  progress.py  project.py  user.py
docs/: index.html  manifest.webmanifest  sw.js
docs/assets/: index-8nVE3Idl.js
scripts/: coverage-summary.cjs  update-and-build.mjs  update-favicon.mjs
src/: App.test.tsx  App.tsx  PWABadge.tsx  main.test.tsx  main.tsx  manifest.webmanifest  swRegistration.ts  types.ts  utils.ts  vite-env.d.ts
src/app/: hooks.test.ts  hooks.ts  persistenceMiddleware.test.ts  persistenceMiddleware.ts  store.test.ts  store.ts
src/components/: ConfirmationDialog.test.tsx  ConfirmationDialog.tsx  CounterCard.test.tsx  CounterCard.tsx  CounterCircle.test.tsx  CounterCircle.tsx  Fireworks.test.tsx  Fireworks.tsx  FullscreenDataGrid.tsx  GlobalCard.tsx  GlobalDialog.tsx  Heatmap.tsx  Layout.tsx  LinkSwitch.test.tsx  LinkSwitch.tsx  LogoIcon.tsx  PatternEditor.tsx  ProgressAlert.test.tsx  ProgressAlert.tsx  SectionCard.tsx  (+3 more)
(+82 files in other folders)
