[project]
name = "knit-row-counter"
version = "0.1.0"
description = "Backend for Knit Row Counter"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]",
    "itsdangerous>=2.2.0",
    "pyjwt[crypto]>=2.11.0",
    "qrcode[pil]>=8.2",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.14",
]
